--- a/command-line/web-template/css/new.css
+++ b/command-line/web-template/css/new.css
@@ -1,3 +1,22 @@
+/*
+#*********************************************************************************
+#  ___ _        _   __      __    _      _             ___ ___  
+# / __| |_ _  _| |__\ \    / /_ _| |_ __| |_  ___ _ _ |_ _/ _ \ 
+# \__ \  _| || | / -_) \/\/ / _` |  _/ _| ' \/ -_) '_| | | (_) |
+# |___/\__|\_, |_\___|\_/\_/\__,_|\__\__|_||_\___|_|(_)___\___/ 
+#          |__/                                                 
+#
+#
+# Originaly developed by students of Whitworth University -> http://www.whitworth.edu/cms/
+# 
+# Incepted and maintained by Will Czifro -> will@czifrotech.com
+#
+#
+# This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
+# KIND, either express or implied.
+#
+#*********************************************************************************
+*/
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 body {
 	font-family: "Roboto", sans-serif;
