--- a/dummy_project/web-example/css/directory.css
+++ b/dummy_project/web-example/css/directory.css
@@ -1,21 +1,63 @@
+/*
+#*********************************************************************************
+#  ___ _        _   __      __    _      _             ___ ___  
+# / __| |_ _  _| |__\ \    / /_ _| |_ __| |_  ___ _ _ |_ _/ _ \ 
+# \__ \  _| || | / -_) \/\/ / _` |  _/ _| ' \/ -_) '_| | | (_) |
+# |___/\__|\_, |_\___|\_/\_/\__,_|\__\__|_||_\___|_|(_)___\___/ 
+#          |__/                                                 
+#
+#
+# Originaly developed by students of Whitworth University -> http://www.whitworth.edu/cms/
+# 
+# Incepted and maintained by Will Czifro -> will@czifrotech.com
+#
+#
+# This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
+# KIND, either express or implied.
+#
+#*********************************************************************************
+*/
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 body {
-	font-family: monospace;
+	font-family: "Roboto", sans-serif;
 }
-
+div {
+	text-align: center;
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 15%;
+}
+table {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	border: solid 1px black;
+}
 a {
 	text-decoration: none
 }
-
 table, th, td {
 	font-size: 1.2em;
-	border: 1px solid #ddd;
 	border-collapse: collapse;
+}
+tr {
+	border-bottom: 1px solid #ddd;
+}
+tr:last-child {
+	border-bottom: none;
 }
 td {
 	padding: 0.3em;
 	padding-right: 1em;
 }
-
 tr:nth-child(even) {
 	background-color: #f6f6f6;
 }
+td:last-child {
+	text-align: right;
+}
+h1 {
+	font-size: 3em;
+	font-weight: 400;
+} 
